# pylinsolve

./: .gitignore  DEVELOPMENT.txt  LICENSE  README.md  README.rst  equation.py  model.py  parameter.py  pylintrc  pyproject.toml  requirements.txt  setup.py  variable.py
pylinsolve/: __init__.py  equation.py  model.py  parameter.py  utils.py  value.py  variable.py
pylinsolve/tests/: ch3_sim.py  ch5_lp.py  test_equation.py  test_model.py  test_parameter.py
pysolve/: __init__.py  equation.py  model.py  parameter.py  utils.py  variable.py
pysolve/tests/: __init__.py  ch3_sim.py  ch3_simex.py  ch5_lp.py  test_equation.py  test_model.py  test_parameter.py  test_variable.py
tests/: __init__.py  ch3_sim.py  test_equation.py  test_model.py  test_parameter.py  test_variable.py
