[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysolve"
version = "0.2.0"
readme = "README.md"
authors = [
  { name="Kenn Takara", email="kenn.takara@outlook.com" },
]
description="A simple interface for solving systems of linear equations"
license = {text = "MIT License"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "sympy",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/kennt/pylinsolve"
"Bug Tracker" = "https://github.com/kennt/pylinsolve/issues"
